--- a/templates/exams/student/student_list.html
+++ b/templates/exams/student/student_list.html
@@ -1,3 +1,4 @@
+<!-- Template Version: Student List -->
 {% extends 'base.html' %}
 
 {% block content %}
@@ -17,29 +18,14 @@
     </div>
     {% endif %}
     
-    <div class="table-responsive">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Username</th>
-                    <th>Grade</th>
-                    <th>Teacher</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for student in students %}
-                <tr>
-                    <td>{{ student.user.username }}</td>
-                    <td>{{ student.get_grade_display }}</td>
-                    <td>{{ student.teacher }}</td>
-                </tr>
-                {% empty %}
-                <tr>
-                    <td colspan="3" class="text-center">No students found.</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
+    <ol>
+        {% for student in students %}
+        <li>
+            {{ student.user.username }} - Grade: {{ student.get_grade_display }} - Teacher: {{ student.teacher }}
+        </li>
+        {% empty %}
+        <li>No students found.</li>
+        {% endfor %}
+    </ol>
 </div>
 {% endblock %}
