exams added, partial success.

--- a/templates/exams/dashboard.html
+++ b/templates/exams/dashboard.html
@@ -9,6 +9,7 @@
                 <div class="card-header d-flex justify-content-between align-items-center">
                     <h3>Teachers</h3>
                     <a href="{% url 'create_teacher' %}" class="btn btn-primary btn-sm">Add Teacher</a>
+                    <a href="{% url 'create_exam' %}" class="btn btn-primary btn-sm">Create Exam</a>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
@@ -76,6 +77,11 @@
                     <a href="{% url 'student_list' %}" class="btn btn-outline-primary btn-sm">View All Students</a>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 mb-4">
+            <a href="{% url 'create_exam' %}" class="btn btn-primary btn-sm">Create Exam</a>
         </div>
     </div>
 </div>
