--- a/templates/exams/teacher/teacher_list.html
+++ b/templates/exams/teacher/teacher_list.html
@@ -5,10 +5,11 @@
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2>Teacher Accounts</h2>
-        <a href="{% url 'create_teacher' %}" class="btn btn-primary">Create New Teacher</a>
+        <a href="{% url 'create_teacher' %}" class="btn btn-primary btn-sm">Create New Teacher</a>
+        <a href="{% url 'create_exam' %}" class="btn btn-primary btn-sm">Create Exam</a>
     </div>
     
-    {% if messages %}
+    {% if messages %}   
     <div class="messages">
         {% for message in messages %}
         <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
