--- a/templates/base.html
+++ b/templates/base.html
@@ -7,67 +7,70 @@
     <title>Exams App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="icon" href="/favicon.avif" type="image/avif">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="{% url 'home' %}">Exams App</a>
-            
-            {% if user.is_authenticated %}
-                <div class="navbar-nav">
-                    {% if user.is_superuser %}
-                        <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="teacherDropdown" role="button" data-bs-toggle="dropdown">
-                                Teachers
-                            </a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="{% url 'teacher_list' %}">List Teachers</a>
-                                <a class="dropdown-item" href="{% url 'create_teacher' %}">Add Teacher</a>
-                            </div>
-                        </div>
-                        <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="studentDropdown" role="button" data-bs-toggle="dropdown">
-                                Students
-                            </a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="{% url 'student_list' %}">List Students</a>
-                                <a class="dropdown-item" href="{% url 'create_student' %}">Add Student</a>
-                            </div>
-                        </div>
-                        <a class="nav-link" href="/admin/">Admin Panel</a>
-                    {% endif %}
-                    <div class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown">
-                            {{ user.username }}
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-end">
-                            <a class="dropdown-item" href="{% url 'change_own_password' %}">Change Password</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-                        </div>
-                    </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="{% url 'home' %}">Exams App</a>
+
+        {% if user.is_authenticated %}
+        <div class="navbar-nav">
+            {% if user.is_superuser %}
+            <div class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="teacherDropdown" role="button"
+                   data-bs-toggle="dropdown">
+                    Teachers
+                </a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="{% url 'teacher_list' %}">List Teachers</a>
+                    <a class="dropdown-item" href="{% url 'create_teacher' %}">Add Teacher</a>
                 </div>
-            {% else %}
-                <div class="navbar-nav">
-                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </div>
+            <div class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="studentDropdown" role="button"
+                   data-bs-toggle="dropdown">
+                    Students
+                </a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="{% url 'student_list' %}">List Students</a>
+                    <a class="dropdown-item" href="{% url 'create_student' %}">Add Student</a>
                 </div>
+            </div>
+            <a class="nav-link" href="/admin/">Admin Panel</a>
             {% endif %}
-        </div>
-    </nav>
-
-    <div class="container mt-4">
-        {% if messages %}
-            {% for message in messages %}
-                <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
-                    {{ message }}
+            <div class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown">
+                    {{ user.username }}
+                </a>
+                <div class="dropdown-menu dropdown-menu-end">
+                    <a class="dropdown-item" href="{% url 'change_own_password' %}">Change Password</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                 </div>
-            {% endfor %}
+            </div>
+        </div>
+        {% else %}
+        <div class="navbar-nav">
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
+        </div>
         {% endif %}
-
-        {% block content %}
-        {% endblock %}
     </div>
+</nav>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<div class="container mt-4">
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
+        {{ message }}
+    </div>
+    {% endfor %}
+    {% endif %}
+
+    {% block content %}
+    {% endblock %}
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
