--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,7 +12,7 @@
                     <h3>Teachers</h3>
                     <a href="{% url 'create_teacher' %}" class="btn btn-primary btn-sm">Add Teacher</a>
                     {% if user|is_teacher or user|is_superuser %}
-                    <a href="{% url 'create_exam' %}" class="btn btn-primary btn-sm">Create Exam</a>
+                    <a href="{% url 'create_exam' %}" class="btn btn-primary" target="_blank">Create Exam</a>
                     {% endif %}
                 </div>
                 <div class="card-body">
@@ -89,7 +89,7 @@
     <div class="row">
         <div class="col-md-12 mb-4">
             {% if user|is_teacher or user|is_superuser %}
-            <a href="{% url 'create_exam' %}" class="btn btn-primary btn-sm">Create Exam</a>
+            <a href="{% url 'create_exam' %}" class="btn btn-primary" target="_blank">Create Exam</a>
             {% endif %}
         </div>
     </div>
