--- a/templates/exams/teacher/homepage.html
+++ b/templates/exams/teacher/homepage.html
@@ -10,7 +10,7 @@
     <div>
         <a href="{% url 'change_own_password' %}" class="btn btn-warning">Change Password</a>
         <a href="{% url 'logout' %}" class="btn btn-danger">Logout</a>
-        <a href="{% url 'create_exam' %}" class="btn btn-primary">Create Exam</a>
+        <a href="{% url 'create_exam' %}" class="btn btn-primary" target="_blank">Create Exam</a>
     </div>
 </body>
 </html>
