html extensions work.

--- a/templates/exams/exam_success.html
+++ b/templates/exams/exam_success.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exam Created Successfully</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
 <h1>Success!</h1>
 <p>Exam created successfully!</p>
-</body>
-</html>
+{% endblock %}
