--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,8 @@
                     {{ user.username }}
                 </a>
                 <div class="dropdown-menu dropdown-menu-end">
-                    <a class="dropdown-item" href="{% url 'change_own_password' %}">Change Password</a>
+                    <a class="dropdown-item" href="{% url 'change_own_password' %}?next={{ request.path|urlencode }}">Change
+                        Password</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                 </div>
