--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <title>Exams App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="icon" href="/favicon.avif" type="image/avif">
+    <link rel="icon" href="{% static 'images/favicon.avif' %}" type="image/avif">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
