--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <title>Exams App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="icon" href="{% static 'images/favicon.avif' %}" type="image/avif">
+    <link rel="icon" href="{% static 'images/favico.ico' %}" type="image/avif">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -73,5 +73,12 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<footer>
+    <p>&copy; 2025 My MVP Application</p>
+    <p>
+        Icons made by <a href="https://www.flaticon.com/free-icons/graduation-cap" title="graduation cap icons">Hilmy
+        Abiyyu A.</a> from <a href="https://www.flaticon.com/" title="Flaticon">Flaticon</a>.
+    </p>
+</footer>
 </body>
 </html>
