--- a/templates/base.html
+++ b/templates/base.html
@@ -74,8 +74,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <footer>
-    <p>&copy; 2025 My MVP Application</p>
-    <p>
+    <p>&copy; 2025 My MVP Application.
         Icons made by <a href="https://www.flaticon.com/free-icons/graduation-cap" title="graduation cap icons">Hilmy
         Abiyyu A.</a> from <a href="https://www.flaticon.com/" title="Flaticon">Flaticon</a>.
     </p>
