student ledger displayed for teachers.

--- a/templates/exams/teacher/homepage.html
+++ b/templates/exams/teacher/homepage.html
@@ -19,4 +19,7 @@
     </li>
     {% endfor %}
 </ul>
+<div class="mt-4">
+    <a href="{% url 'accessible_students' %}" class="btn btn-primary">View Accessible Students</a>
+</div>
 {% endblock %}
